--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,6 +19,7 @@
     
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/smoothscroll.js"></script>
+    <script src="assets/js/facebook.js"></script>
 </head>
 <body ng-app="app">
 	
